ProjetCompil/Verif/Test/fail/ident.cas
program
   	IF : integer;
begin
	NULL;
end.